# jaxoracer

./: .gitignore  jaxoracer.py  pyproject.toml  ref.py  test.py
checkpoints/: ckpt_50.npz
