[project]
name = "jaxoracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.9.2",
    "jax-mps>=0.9.13",
    "optax>=0.2.8",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "tyro>=1.0.12",
]
